index: fix clearing on safari

--- a/styles/main.less
+++ b/styles/main.less
@@ -147,12 +147,12 @@ a:hover, a:hover > * {
     .make-sm-column(4);
     .make-md-column(3);
     /* make sure rows clear when courses have different height */
-    @media (max-width: @screen-sm) {
+    @media (max-width: @screen-xs-max) {
       &:nth-child(2n+1) {
         clear: left;
       }
     }
-    @media (min-width: @screen-sm) and (max-width: @screen-md) {
+    @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
       &:nth-child(3n+1) {
         clear: left;
       }
